# eyeballer

./: .gitignore  README.md  convert_weights.py  eyeballer.py  prediction_output_template.html  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
eyeballer/: cli.py  model.py  visualization.py
tests/: __init__.py  test_predict.py
