[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eyeballer"
version = "3.1.0"
description = "ML-powered web screenshot classifier for penetration testing"
requires-python = ">=3.11"
dependencies = [
    "tensorflow-cpu>=2.16",
    "progressbar2",
    "Pillow",
    "numpy",
    "click",
    "jinja2",
    "matplotlib",
]

[project.scripts]
eyeballer = "eyeballer.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["eyeballer*"]

[tool.setuptools.package-data]
eyeballer = ["*.html"]
